--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-11 mb-3">
                     <div class="card">
-                        <img src="../Formattec/assets/image-1.jpg" class="card-img-top" alt="Imagem do Card">
+                        <img src="assets/image-1.jpg" class="card-img-top" alt="Imagem do Card">
                         <div class="card-body">
                             <h3 class="card-title text-center">Baile de Gala</h3>
                             <p class="card-text">Descubra a magia do Baile de Gala de Formatura com uma experiência
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-11 mb-3">
                     <div class="card">
-                        <img src="../Formattec/assets/image-2.jpg" class="card-img-top" alt="Imagem do Card">
+                        <img src="assets/image-2.jpg" class="card-img-top" alt="Imagem do Card">
                         <div class="card-body">
                             <h3 class="card-title text-center">Colação de Grau</h3>
                             <p class="card-text">Descubra a magia do Baile de Gala de Formatura com uma experiência
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-11 mb-3">
                     <div class="card">
-                        <img src="../Formattec/assets/image-3.jpg" class="card-img-top" alt="Imagem do Card">
+                        <img src="assets/image-3.jpg" class="card-img-top" alt="Imagem do Card">
                         <div class="card-body">
                             <h3 class="card-title text-center">Aluguel de Beca</h3>
                             <p class="card-text">Descubra a magia do Baile de Gala de Formatura com uma experiência
@@ -154,7 +154,7 @@
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-11 mb-3">
                     <div class="card">
-                        <img src="../Formattec/assets/image-4.jpg" class="card-img-top" alt="Imagem do Card">
+                        <img src="assets/image-4.jpg" class="card-img-top" alt="Imagem do Card">
                         <div class="card-body">
                             <h3 class="card-title text-center">Ensaio Fotográfico</h3>
                             <p class="card-text">Descubra a magia do Baile de Gala de Formatura com uma experiência
@@ -312,7 +312,7 @@
         </div>
     </section>
     <div style="background-color: #f2f2f2;">
-        <section id="sixth-section" class="dark-section px-3" class="pb-5">
+        <section id="sixth-section" class="dark-section" class="pb-5">
             <div class="container-fluid pb-5">
                 <div class="row">
                     <div class="col-md-12 text-center header-text">
@@ -320,17 +320,19 @@
                         <span>Momentos eternizados</span>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row px-3" style="justify-content: center;">
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-11 mb-3">
                         <div class="card">
                             <div class="card-header row">
-                                <div class="col-xl-3 col-md-4" style="align-content: center;text-align: center;">
+                                <div class="col-xl-3 col-lg-3 col-md-2 col-sm-3 col-2"
+                                    style="align-content: center;text-align: center;">
                                     <div class="card-header-img">
                                         <img src="assets/CEO.png" alt="" class="profile-rate-image"
                                             style="border: 1px solid #C2A152">
                                     </div>
                                 </div>
-                                <div class="col-xl-9 col-md-8" style="align-content: center;">
+                                <div class="col-xl-9 col-lg-9 col-md-10 col-sm-9 col-10"
+                                    style="align-content: center; padding-left: 0;">
                                     <div class="card-header-name">
                                         <h4 class="m-0"><b>R</b>afaela <b>S</b>antos</h4>
                                     </div>
@@ -353,13 +355,15 @@
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-11 mb-3">
                         <div class="card">
                             <div class="card-header row">
-                                <div class="col-xl-3 col-md-4" style="align-content: center;text-align: center;">
+                                <div class="col-xl-3 col-lg-3 col-md-2 col-sm-3 col-2"
+                                    style="align-content: center;text-align: center;">
                                     <div class="card-header-img">
                                         <img src="assets/CEO.png" alt="" class="profile-rate-image"
                                             style="border: 1px solid #C2A152">
                                     </div>
                                 </div>
-                                <div class="col-xl-9 col-md-8" style="align-content: center;">
+                                <div class="col-xl-9 col-lg-9 col-md-10 col-sm-9 col-10"
+                                    style="align-content: center; padding-left: 0;">
                                     <div class="card-header-name">
                                         <h4 class="m-0"><b>R</b>afaela <b>S</b>antos</h4>
                                     </div>
@@ -382,13 +386,15 @@
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-11 mb-3">
                         <div class="card">
                             <div class="card-header row">
-                                <div class="col-xl-3 col-md-4" style="align-content: center;text-align: center;">
+                                <div class="col-xl-3 col-lg-3 col-md-2 col-sm-3 col-2"
+                                    style="align-content: center;text-align: center;">
                                     <div class="card-header-img">
                                         <img src="assets/CEO.png" alt="" class="profile-rate-image"
                                             style="border: 1px solid #C2A152">
                                     </div>
                                 </div>
-                                <div class="col-xl-9 col-md-8" style="align-content: center;">
+                                <div class="col-xl-9 col-lg-9 col-md-10 col-sm-9 col-10"
+                                    style="align-content: center; padding-left: 0;">
                                     <div class="card-header-name">
                                         <h4 class="m-0"><b>R</b>afaela <b>S</b>antos</h4>
                                     </div>
@@ -411,13 +417,15 @@
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-11 mb-3">
                         <div class="card">
                             <div class="card-header row">
-                                <div class="col-xl-3 col-md-4" style="align-content: center;text-align: center;">
+                                <div class="col-xl-3 col-lg-3 col-md-2 col-sm-3 col-2"
+                                    style="align-content: center;text-align: center;">
                                     <div class="card-header-img">
                                         <img src="assets/CEO.png" alt="" class="profile-rate-image"
                                             style="border: 1px solid #C2A152">
                                     </div>
                                 </div>
-                                <div class="col-xl-9 col-md-8" style="align-content: center;">
+                                <div class="col-xl-9 col-lg-9 col-md-10 col-sm-9 col-10"
+                                    style="align-content: center; padding-left: 0;">
                                     <div class="card-header-name">
                                         <h4 class="m-0"><b>R</b>afaela <b>S</b>antos</h4>
                                     </div>
