--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
 
 <body>
     <div class="navbar-wrapper" style="z-index: 5; position: fixed;">
-        <nav class="navbar navbar-expand-xl bg-body-tertiary p-0 navbar-with-color" id="navbar"
+        <nav class="navbar navbar-expand-xl bg-body-tertiary p-0 navbar-with-color normal" id="navbar"
             style="z-index: 50;margin-top:1rem">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand logo" href="#">
                     <img src="assets/Logos/logo.png" alt="Logo" class="d-inline-block align-text-top">
+                </a>
+                <a class="navbar-brand logo-nav" href="#">
+                    <img src="assets/Logos/logo_nav.png" alt="Logo"
+                        class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
