--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#initial-section">Início</a>
+                            <a class="nav-link" aria-current="page" href="#initial-section">Inícioz</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#services-general-section">Serviços</a>
