--- a/kids.html
+++ b/kids.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
 
     <head>
         <meta charset="utf-8">
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="styles/navbar.css">
         <link rel="stylesheet" href="styles/dark-sections.css">
         <link rel="stylesheet" href="styles/initial-section.css">
-        <link rel="stylesheet" href="styles/seventh-section.css">
+        <link rel="stylesheet" href="styles/kids-detail-section.css">
         <link rel="stylesheet" href="styles/gallery-section.css">
         <link rel="stylesheet" href="styles/third-section.css">
         <link rel="stylesheet" href="styles/contact-section.css">
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </section>
-        <section id="seventh-section" class="pb-5 kids">
+        <section id="kids-detail-section" class="pb-5 kids">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center header-text">
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-5 col-sm-6 col-11">
+                    <div class="col-xl-4 col-lg-4 col-md-5 col-sm-6 col-11" style="align-content: center;">
                         <div class="img-container p-3"
                             style="background-color: #fdd1b5; border-radius: 20px;">
                             <img src="assets/Images/kid-graduation.jpg" alt>
@@ -188,8 +188,7 @@
             </div>
         </section>
         <div style="background-color: #f2f2f2;">
-            <section id="contact-section" class="dark-section kids"
-                class="pb-2">
+            <section id="contact-section" class="dark-section kids pb-2">
                 <div class="container-fluid pb-3">
                     <div class="container">
                         <div class="row">
