--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
                                 <a href="tel:27995338747"
                                     class="btn btn-secondary">
-                                    <i class="fa fa-phone"
+                                    <i class="fa fa-phone fa-beat"
                                         style="margin-right: 10px;"
                                         aria-hidden="true"></i>
                                     Telefone
