--- a/kids.html
+++ b/kids.html
@@ -94,7 +94,7 @@
                         <div class="row m-auto h-100"
                             style="align-content: space-evenly;">
                             <div class="card-info row py-2 m-auto"
-                                style="background-color: #98a9cf;">
+                                style="background-color: #98a9cf; border-left: 10px solid #164ED4;">
                                 <div class="col-2"
                                     style="align-content: center; font-size: 2rem; text-align: center;">
                                     <div class="icon-container">
@@ -115,7 +115,7 @@
                                 </div>
                             </div>
                             <div class="card-info row py-2 m-auto"
-                                style="background-color: #fdc8d2;">
+                                style="background-color: #fdc8d2; border-left: 10px solid #FC3860;">
                                 <div class="col-2"
                                     style="align-content: center; font-size: 2rem; text-align: center;">
                                     <div class="icon-container">
@@ -145,7 +145,7 @@
                         <div class="row m-auto h-100"
                             style="align-content: space-evenly;">
                             <div class="card-info row py-2 m-auto"
-                                style="background-color: #ffd3e9;">
+                                style="background-color: #ffd3e9; border-left: 10px solid #F771B5;">
                                 <div class="col-2"
                                     style="align-content: center; font-size: 2rem; text-align: center;">
                                     <div class="icon-container">
@@ -164,7 +164,7 @@
                                 </div>
                             </div>
                             <div class="card-info row py-2 m-auto"
-                                style="background-color: #b0dada;">
+                                style="background-color: #b0dada; border-left: 10px solid #10DFDF;">
                                 <div class="col-2"
                                     style="align-content: center; font-size: 2rem; text-align: center;">
                                     <div class="icon-container">
@@ -187,8 +187,8 @@
                 </div>
             </div>
         </section>
-        <div style="background-color: #f2f2f2;">
-            <section id="contact-section" class="dark-section kids pb-2">
+        <div>
+            <section id="contact-section" class="dark-section kids pb-2" style="border-radius: 0 0 80px 0;">
                 <div class="container-fluid pb-3">
                     <div class="container">
                         <div class="row">
